Login page, registration page added + mysql was connected

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,14 +3,11 @@
 	<head>
 	  <meta charset="utf-8" />
 	  <title>Spring WebSocket Chat</title>
-	  
 	  <!-- Loading Bootstrap -->
-	  <link href="lib/flat-ui/dist/css/vendor/bootstrap.min.css" rel="stylesheet">
-	
+	  <link href="/lib/flat-ui/dist/css/vendor/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 	  <!-- Loading Flat UI -->
-	  <link href="lib/flat-ui/dist/css/flat-ui.css" rel="stylesheet">
-	  
-	  <link href="css/chat.css" rel="stylesheet">	  
+	  <link href="/lib/flat-ui/dist/css/flat-ui.css" type="text/css" rel="stylesheet"/>
+	  <link href="/css/chat_style.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
 		<div class="container">
@@ -30,7 +27,7 @@
 			
 			            <div class="form-group">
 			              <input type="password" class="form-control login-field" name="password" />
-			              <label class="login-field-icon fui-lock" for="login-pass"> Admin password </label>
+			              <label class="login-field-icon fui-lock" for="login-pass"> Password </label>
 			            </div>
 			
 						<input class="btn btn-primary btn-lg btn-block"  type="submit" value="Log In"/>
