--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,52 +1,59 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII"/>
     <title>Registration</title>
 </head>
 <body>
-<form:form modelAttribute="user" method="POST" enctype="utf8">
+<form th:object="${user}" method="POST" enctype="utf8">
     <table>
         <tr>
             <td>
-                <label><spring:message code="label.user.firstName"/></label>
+                <label>First name</label>
             </td>
-            <td><form:input path="firstName" value="" /></td>
-            <form:errors path="firstName" element="div"/>
+            <td>
+                <input th:field="*{firstName}" class="form-control" required="required" placeholder="First Name"/>
+                <!--<form:input path="firstName" value="" /></td>-->
+            <!--<form:errors path="firstName" element="div"/>-->
+            </td>
         </tr>
         <tr>
             <td>
-                <label><spring:message code="label.user.lastName"/></label>
+                <label>Last Name</label>
             </td>
-            <td><form:input path="lastName" value="" /></td>
-            <form:errors path="lastName" element="div" />
+            <td>
+                <input th:field="*{lastName}" class="form-control" required="required" placeholder="Last Name"/>
+                <!--<form:input path="lastName" value="" /> -->
+            </td>
+            <!--<form:errors path="lastName" element="div" />-->
         </tr>
         <tr>
             <td>
-                <label><spring:message code="label.user.email"/></label>
+                <label>Email</label>
             </td>
-            <td><form:input path="email" value="" /></td>
-            <form:errors path="email" element="div" />
+            <td>
+                <input th:field="*{email}" class="form-control" required="required" placeholder="Email"/>
+            </td>
         </tr>
         <tr>
             <td>
-                <label><spring:message code="label.user.password"/></label>
+                <label>Password</label>
             </td>
-            <td><form:input path="password" value="" type="password" /></td>
-            <form:errors path="password" element="div" />
+            <td>
+                <input th:field="*{password}" class="form-control" required="required" placeholder="Password"/>
+            </td>
         </tr>
         <tr>
-            <td><label><spring:message code="label.user.confirmPass"/></label>
+            <td>
+                <label>Confirm password</label>
             </td>
-            <td><form:input path="matchingPassword" value="" type="password" /></td>
-            <form:errors element="div" />
+            <td>
+                <input th:field="*{matchingPassword}" class="form-control" required="required" placeholder="Matching password"/>
+            </td>
         </tr>
     </table>
-    <button type="submit"><spring:message code="label.form.submit"/></button>
-</form:form>
-<br>
-<a href="<c:url value="../login" />">
-<spring:message code="label.form.loginLink"/>
-</a>
+    <button type="submit" class="btn btn-primary btn-lg">Sign up</button>
+</form>
+<br/>
 </body>
 </html>
