Password encoding and authorization have been configured

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 	  <link href="/lib/flat-ui/dist/css/vendor/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 	  <!-- Loading Flat UI -->
 	  <link href="/lib/flat-ui/dist/css/flat-ui.css" type="text/css" rel="stylesheet"/>
-	  <link href="/css/chat_style.css" type="text/css" rel="stylesheet"/>
+	  <link href="/css/chat.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
 		<div class="container">
