--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,7 +5,7 @@
     <!--<link href="/lib/flat-ui/dist/css/flat-ui.css" type="text/css" rel="stylesheet"/>-->
     <link href="/lib/flat-ui/dist/css/vendor/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <link href="/lib/flat-ui/dist/css/flat-ui.css" type="text/css" rel="stylesheet"/>
-    <link href="/css/registration_form.css" type="text/css" rel="stylesheet"/>
+    <link href="/css/registration-form.css" type="text/css" rel="stylesheet"/>
     <title>Registration</title>
 </head>
 <body>
